# test_habi

./: .gitignore  README.md  docker-compose.yml
app/: .bashrc  .env.example  Dockerfile  conftest.py  docker-entrypoint.sh  main.py  pyproject.toml
app/core/: __init__.py  config.py  database.py  decorators.py  utils.py
app/migrations/: env.py
app/migrations/versions/: 91c9856309bd_change_type_request_id_to_int.py  9d5ee2804063_add_model_serviceorderimage.py  a6f76b5673fa_create_initial_models_category_.py
app/models/: __init__.py  auditor.py  category.py  processed_request.py  service_order.py  service_order_image.py  service_order_item.py  spare_part.py
app/routers/: __init__.py  categories.py  categories_api_view.py  orders_api_view.py  orders_image_api_views.py  spare_parts.py  spare_parts_api_views.py
app/schemas/: __init__.py  category_schemas.py  service_order_image_schema.py  service_order_item_schemas.py  service_order_schemas.py  spare_part.py  spare_part_schemas.py
app/services/: __init__.py  s3_service.py
app/tests/: test_categories_api.py  test_orders_api.py  test_orders_image_api.py  test_spare_parts_api.py
init/postgres/: init.sql
