[project]
name = "habi-test"
version = "0.1.0"
description = "Technical test for Habi, a FastAPI application with PostgreSQL and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
