[project]
name = "habi-test"
version = "0.1.0"
description = "Technical test for Habi, a FastAPI application with PostgreSQL and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "awscli>=1.44.14",
    "boto3>=1.42.24",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
